[project]
name = "Project name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "polars",
    "scikit-learn",
    "duckdb",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
    "ruff",
    "debugpy",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]